twitterカードを編集

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
       content="SocialTechはEdTech業界のリーディングカンパニーを目指します。"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="brkyas" />
+    <meta
+      property="og:url"
+      content="https://icetabetai0403.github.io/socialtech/index.html"
+    />
+    <meta property="og:title" content="SocialTeck" />
+    <meta property="og:description" content="SocialTechのHPです。" />
+    <meta
+      property="og:image"
+      content="https://icetabetai0403.github.io/socialtech/images/logo.png"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
